language/move-compiler/tests/move_check/translate/let_in_script.move
script {
    let a = 1;
}
